<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_title_top">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

    <PreferenceScreen
        android:key="pref_key_userdata"
        android:persistent="false"
        android:title="@string/personalData_title">
        <PreferenceCategory
            android:key="pref_key_userdata_sub"
            android:title="@string/personalData_title">
            <EditTextPreference
                android:key="pref_ud_lastname"
                android:title="@string/hint_prename" />
            <EditTextPreference
                android:key="pref_ud_prename"
                android:title="@string/hint_name" />
            <EditTextPreference
                android:key="pref_ud_street"
                android:title="@string/hint_address_street" />
            <EditTextPreference
                android:inputType="number"
                android:key="pref_ud_housenr"
                android:title="@string/hint_address_housenr" />
            <EditTextPreference
                android:inputType="number"
                android:key="pref_ud_zip"
                android:title="@string/hint_address_zip" />
            <EditTextPreference
                android:key="pref_ud_city"
                android:title="@string/hint_address_city" />
            <EditTextPreference
                android:inputType="phone"
                android:key="pref_ud_phonenumber"
                android:title="@string/hint_phonenumber" />

            <EditTextPreference
                android:inputType="textEmailAddress"
                android:key="pref_ud_email"
                android:title="@string/hint_email" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceCategory
        android:key="pref_key_advanced section"
        android:title="@string/pref_title_expert_section">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_debug_settings_enabled"
            android:summary="@string/pref_description_debug_settings_enabled"
            android:title="@string/pref_title_debug_settings_enabled" />

    </PreferenceCategory>

</PreferenceScreen>
