<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivityFragment"
    android:fitsSystemWindows="true">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.example.moltox.taxiappdev.OrderActivityFragment"
            tools:showIn="@layout/activity_order">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/iv_taxi_1" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Test"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_orderFrag_section1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:theme="@style/AppTheme.ChoiceCards.CardView"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:theme="@style/AppTheme.ChoiceCards.InnerLinearLayout">

                    <TextView
                        android:id="@+id/section1_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/editText_email"
                        android:text="@string/section1_title"
                        android:textSize="@dimen/textSize_cv_title" />

                    <LinearLayout
                        android:id="@+id/LinearLayout_StreetRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/section1_title"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText_address_street"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/section1_title"
                            android:layout_weight=".85"
                            android:hint="@string/hint_address_street"
                            android:inputType="textPostalAddress"
                            android:textSize="@dimen/textSize_standard" />

                        <EditText
                            android:id="@+id/editText_address_housenr"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:layout_weight=".15" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText_address_zip"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/LinearLayout_StreetRow"
                            android:layout_weight=".25"
                            android:hint="@string/hint_address_zip"
                            android:inputType="number"
                            android:textSize="@dimen/textSize_standard" />

                        <EditText
                            android:id="@+id/editText_address_city"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/editText_address_street"
                            android:layout_toEndOf="@+id/editText_address_zip"
                            android:layout_toRightOf="@+id/editText_address_zip"
                            android:layout_weight=".75"
                            android:hint="@string/hint_address_city"
                            android:inputType="textPostalAddress"
                            android:textSize="@dimen/textSize_standard" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_orderFrag_section2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:theme="@style/AppTheme.ChoiceCards.CardView"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="10dp"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:theme="@style/AppTheme.ChoiceCards.InnerLinearLayout">

                    <TextView
                        android:id="@+id/section2_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editText_address_zip"
                        android:text="@string/section2_title"
                        android:textSize="@dimen/textSize_cv_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText_dest_address_street"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".85"
                            android:hint="@string/hint_address_street"
                            android:inputType="textPostalAddress"
                            android:textSize="@dimen/textSize_standard" />

                        <EditText
                            android:id="@+id/editText_dest_address_housenr"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:layout_above="@+id/editText_dest_address_city"
                            android:layout_alignEnd="@+id/editText_dest_address_street"
                            android:layout_alignRight="@+id/editText_dest_address_street"
                            android:layout_weight=".15" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText_dest_address_zip"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            android:hint="@string/hint_address_zip"
                            android:inputType="number"
                            android:textSize="@dimen/textSize_standard" />

                        <EditText
                            android:id="@+id/editText_dest_address_city"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".75"
                            android:hint="@string/hint_address_city"
                            android:inputType="textPostalAddress"
                            android:textSize="@dimen/textSize_standard" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_orderFrag_persDataSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:theme="@style/AppTheme.ChoiceCards.CardView"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:theme="@style/AppTheme.ChoiceCards.InnerLinearLayout">

                    <TextView
                        android:id="@+id/personalData_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personalData_title"
                        android:textSize="@dimen/textSize_cv_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText_prename"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_prename"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/textSize_standard" />

                        <EditText
                            android:id="@+id/editText_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/textSize_standard" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            android:hint="@string/hint_phone_prefix"
                            android:textSize="@dimen/textSize_standard"
                            android:inputType="number"
                            />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".85"
                            android:hint="@string/hint_phonenumber"
                            android:textSize="@dimen/textSize_standard"
                            android:inputType="number"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/textSize_standard" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_orderFrag_section3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:theme="@style/AppTheme.ChoiceCards.CardView"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="10dp"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:theme="@style/AppTheme.ChoiceCards.InnerLinearLayout">

                    <TextView
                        android:id="@+id/section3_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section3_title"
                        android:textSize="@dimen/textSize_cv_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/textView_count_person_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".85"
                            android:text="@string/textView_count_person"
                            android:textSize="@dimen/textSize_standard" />

                        <TextView
                            android:id="@+id/textView_count_person"
                            android:text="@string/editText_count_person"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".15" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_count_cars_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".85"
                            android:text="@string/texTView_count_cars"
                            android:textSize="@dimen/textSize_standard" />

                        <TextView
                            android:id="@+id/textView_count_cars"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".15"
                            android:text="@string/editText_count_cars"
                            android:textSize="@dimen/textSize_standard" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".85"
                            android:text="@string/textView_limited_person"
                            android:textSize="@dimen/textSize_standard"/>

                        <CheckBox
                            android:id="@+id/cb_limitedPerson"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".15"

                            />


                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button_orderNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_ordernow"
                style="@style/Widget.AppCompat.Button.Borderless"

                 />
        </LinearLayout>


    </ScrollView>
</LinearLayout>

